terraform-scripts/mettl-terraform/modules/vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "${var.vpc_cidr}"

  tags {
    Name = "${format("%s", lower("${var.vpc_name}.${var.private_dns_zone_name}"))}"
  }

  enable_dns_hostnames = "true"
}
